<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_display">

        <SwitchPreferenceCompat
                android:key="showDate"
                android:title="@string/pref_title_showDate"
                android:defaultValue="true"/>

        <SwitchPreferenceCompat
                android:key="simplerDate"
                android:title="@string/pref_title_simplerDate"
                android:defaultValue="true"/>

        <SwitchPreferenceCompat
                android:key="showBattery"
                android:title="@string/pref_title_showBattery"
                android:defaultValue="true"/>

        <SwitchPreferenceCompat
                android:key="removeLineBreak"
                android:title="@string/pref_title_removeLineBreak"
                android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_style">

        <EditTextPreference
                android:key="fontSize"
                android:title="@string/pref_title_fontSize"
                android:defaultValue="36"
                android:maxLength="2"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:singleLine="true"
                android:maxLines="1"/>

        <ListPreference
                android:key="fontfamily"
                android:title="@string/pref_title_fontfamily"
                android:defaultValue=""
                android:entries="@array/pref_list_fontfamily_titles"
                android:entryValues="@array/pref_list_fontfamily_values"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>

        <ListPreference
                android:key="textAlignment"
                android:title="@string/pref_title_textAlignment"
                android:defaultValue="center"
                android:entries="@array/pref_list_textAlignment_titles"
                android:entryValues="@array/pref_list_textAlignment_values"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                android:key="foregroundColor"
                android:title="@string/pref_title_foregroundColor"
                android:defaultValue="@android:color/white"
                cpv_dialogTitle="@string/pref_title_foregroundColor"
                cpv_showAlphaSlider="true"/>

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                android:key="backgroundColor"
                android:title="@string/pref_title_backgroundColor"
                android:defaultValue="@android:color/black"
                cpv_dialogTitle="@string/pref_title_backgroundColor"
                cpv_showAlphaSlider="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_working">

        <ListPreference
                android:key="notifState"
                android:title="@string/pref_title_notifState"
                android:defaultValue="hidden"
                android:entries="@array/pref_list_notifState_titles"
                android:entryValues="@array/pref_list_notifState_values"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>

        <ListPreference
                android:key="language"
                android:title="@string/pref_title_language"
                android:defaultValue="default"
                android:entries="@array/pref_list_language_titles"
                android:entryValues="@array/pref_list_language_values"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>

        <SwitchPreferenceCompat
                android:key="brightScreen"
                android:title="@string/pref_title_brightScreen"
                android:defaultValue="false"/>

        <EditTextPreference
                android:key="maxTranslationDisplacement"
                android:title="@string/pref_title_maxTranslationDisplacement"
                android:defaultValue="0.0"
                android:maxLength="3"
                android:selectAllOnFocus="true"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:maxLines="1"/>

        <EditTextPreference
                android:key="updateSeconds"
                android:title="@string/pref_title_updateSeconds"
                android:defaultValue="60"
                android:maxLength="4"
                android:selectAllOnFocus="true"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:theme="@style/AppTheme"
                android:maxLines="1"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
